# percona-server-mongodb

./: .bazelignore  .bazelrc  .bazelrc.psmdb  .clang-tidy.in  .gitattributes  .gitignore  .prettierignore  BUILD.bazel  CODE_OF_CONDUCT.md  COMMIT_601e9df50dd_DESCRIPTION.md  CONTRIBUTING.md  CONTRIBUTING.rst  CONTRIBUTING_my.rst  Gemfile  MODULE.bazel  MONGO_TOOLS_TAG_VERSION  README.md  README.third_party.md  SConstruct  WORKSPACE.bazel  _config.yml  copy.bara.sky  eslint.config.mjs  index.md  pyproject.toml  sbom.json
bazel/mongot_extension_signing_key/: BUILD.bazel  generate_embedded_public_key_header.py  gpg_export_armored_key.py  mongot_extension_signing_key.bzl
jstests/audit/: BUILD.bazel  _audit_helpers.js  audit_add_shard.js  audit_authenticate.js  audit_authz_application_message.js  audit_authz_command.js  audit_authz_current_op.js  audit_authz_delete.js  audit_authz_find.js  audit_authz_get_more.js  audit_authz_insert.js  audit_authz_kill_op.js  audit_authz_update.js  audit_config.js  audit_create_collection.js  audit_create_database.js  audit_create_index.js  audit_drop_collection.js  audit_drop_database.js  audit_drop_index.js  audit_enable_sharding.js  audit_getoptions_command.js  audit_log_application_message.js  audit_log_rotate.js  audit_log_rotate_on_start.js  audit_no_createdb_restart.js  audit_remove_shard.js  audit_rename_collection.js  audit_replset_reconfig.js  audit_shard_collection.js  audit_shutdown.js  audit_system_users.js  audit_system_users_authz.js
jstests/backup/: BUILD.bazel  _backup_helpers.js  backup_auth.js  backup_create_dest.js  backup_simple.js  backup_wt_forindexes.js  backup_wt_perdb.js  backup_wt_perdb_forindexes.js  dest_path.js  stats_check.js  updates_during_backup.js
jstests/concurrency/fsm_workload_helpers/: BUILD.bazel
jstests/knobs/: BUILD.bazel  knobs.js
jstests/ldapauthz/: BUILD.bazel  _check.js  _setup.js  ldapauthz_ldap_timeouts.js  ldapauthz_mapping_query.js  ldapauthz_mapping_subst.js  ldapauthz_memberof.js  ldapauthz_pool_invalidation.js  ldapauthz_simple.js  ldapauthz_userRoles_with_dn.js  ldapauthz_user_cache.js  ldapauthz_user_to_dn_cache.js  ldapauthz_user_to_dn_cache_packet_capture.js
jstests/ldapauthz/lib/: BUILD.bazel  ldap_directory.js  ldap_mock.js  ldap_mock.py  use_mock_ldap.js
jstests/oidc/: BUILD.bazel  auth_absolute_claims.js  auth_claims.js  auth_issuers_no_human_flows.js  auth_jwks_cached.js  auth_jwks_changed.js  auth_jwks_polling.js  auth_jwks_quiesce_period.js  auth_jwt.js  auth_log_claims.js  auth_multiple_audiences.js  auth_multiple_issuers.js  auth_multiple_users.js  auth_multiple_users_parallel.js  auth_no_claims.js  auth_principal_name.js  auth_principal_name_mismatch.js  auth_privileges.js  auth_refresh_token.js  auth_request_scopes.js  auth_session_expired.js  auth_time_iat.js  auth_token_payload.js  auth_with_token.js  build_info.js  command_list_keys.js  command_refresh_keys.js  commands.js  invalid_config.js  mongodb_idp_https_conversation.js  oidc_auth_claims.js  oidc_auth_issuers_no_human_flows.js  oidc_auth_jwks_polling.js  oidc_auth_jwt.js  oidc_auth_log_claims.js  oidc_auth_multiple_audiences.js  oidc_auth_multiple_issuers.js  oidc_auth_multiple_users.js  oidc_auth_no_claims.js  oidc_auth_principal_name.js  (+13 more)
jstests/oidc/lib/: BUILD.bazel  README.md  oidc_fixture.js  oidc_idp_mock.js  oidc_idp_mock.py
jstests/percona/noPassthroughWithMongod/: BUILD.bazel  validate_interrupt.js
jstests/percona/tde/: BUILD.bazel  deferred_key_cleanup_after_reaper.js  deferred_key_cleanup_command.js  deferred_key_cleanup_drop_database.js  deferred_key_cleanup_keyid_generations.js  deferred_key_cleanup_on_startup.js  deferred_key_cleanup_stress.js  drop_recreate_generation_keyid.js  index_build_spill.js  orphan_key_cleanup.js  wrongkey.js  wrongkey_replset.js
jstests/redaction/: BUILD.bazel  redaction_command_line.js  redaction_config.js  redaction_mongos_command_line.js  redaction_mongos_config.js  redaction_mongos_setparameter.js  redaction_setparameter.js  redaction_type_errors.js
jstests/suites/query-execution/: BUILD.bazel  OWNERS.yml  common.bzl
jstests/telemetry/: BUILD.bazel  _telemetry_helpers.js  telemetry_auth.js  telemetry_replicaset.js  telemetry_sharded.js  telemetry_single_node.js
src/mongo/db/audit/: BUILD.bazel  audit.cpp  audit.h  audit_commands.cpp  audit_flusher.cpp  audit_options.cpp  audit_options.h  audit_options.idl  audit_options_test.cpp  audit_parameters.idl  auditlog.h
src/mongo/db/auth/oidc/: BUILD.bazel  SConscript  match_pattern.h  oidc_commands.cpp  (+9 more)
src/mongo/db/backup/: BUILD.bazel  SConscript  backup_commands.cpp  backupable.h
src/mongo/db/encryption/: BUILD.bazel  README.md  SConscript  encryption_kmip.cpp  encryption_kmip.h  encryption_options.h  encryption_status.cpp  encryption_status_test.cpp  error.h  error_builder.h  key.cpp  key.h  key_entry.h  key_id.cpp  key_id.h  key_id_test.cpp  key_operations.cpp  key_operations.h  kmip_client.cpp  kmip_client.h  kmip_exchange.cpp  kmip_exchange.h  kmip_session.h  master_key_provider.cpp  master_key_provider.h  read_file_to_secure_string.cpp  read_file_to_secure_string.h  vault_client.cpp  vault_client.h  vault_client_test.cpp  vault_secret_metadata_locator.cpp  vault_secret_metadata_locator_test.cpp
src/mongo/db/ldap/: BUILD.bazel  SConscript  ldap_manager.cpp  ldap_manager.h  ldap_manager_impl.cpp  ldap_manager_impl.h
src/mongo/db/recycle_bin/: BUILD.bazel  README.md  recycle_bin.cpp  recycle_bin.h  recycle_bin.idl  recycle_bin_commands.cpp  recycle_bin_test.cpp
src/mongo/db/telemetry/: BUILD.bazel  SConscript  telemetry_parameter.cpp  telemetry_parameter.idl  telemetry_path.cpp  telemetry_path.h  telemetry_thread.h  telemetry_thread_base.cpp  telemetry_thread_base.h  telemetry_thread_d.cpp  telemetry_thread_s.cpp
src/mongo/tools/: BUILD.bazel  SConscript  perconadecrypt.cpp  perconadecrypt_options.cpp  perconadecrypt_options.h  perconadecrypt_options.idl  perconadecrypt_options_init.cpp
src/mongo/tools/mongobridge_tool/: BUILD.bazel  mongobridge_options.cpp  mongobridge_options.idl
(+1783 files in other folders)
