load("//bazel:mongo_js_rules.bzl", "all_subpackage_javascript_files", "mongo_js_library")
load("//bazel/resmoke:resmoke.bzl", "resmoke_suite_test")

package(default_visibility = ["//visibility:public"])

mongo_js_library(
    name = "all_javascript_files",
    srcs = glob([
        "*.js",
    ]),
)

all_subpackage_javascript_files()

# Shared helper load()ed by the TDE wrongkey tests in jstests/percona/tde; exported so
# those suites can depend on just this file rather than the whole backup library.
exports_files([
    "_backup_helpers.js",
])

# backup tests start their own mongod's; no external fixture beyond mongod + shell.
resmoke_suite_test(
    name = "backup",
    config = "//buildscripts/resmokeconfig:suites/backup.yml",
    tags = [
        "backup",
        "percona",
    ],
    deps = [
        "//src/mongo/db:mongod",
        "//src/mongo/shell:mongo",
    ],
)

# Encrypted variants: same fixture plus the TDE encryption key.
resmoke_suite_test(
    name = "backup_tde_cbc",
    config = "//buildscripts/resmokeconfig:suites/backup_tde_cbc.yml",
    data = ["//jstests/percona/tde:ekf"],
    tags = [
        "backup_tde_cbc",
        "percona",
        "tde",
    ],
    deps = [
        "//src/mongo/db:mongod",
        "//src/mongo/shell:mongo",
    ],
)

resmoke_suite_test(
    name = "backup_tde_gcm",
    config = "//buildscripts/resmokeconfig:suites/backup_tde_gcm.yml",
    data = ["//jstests/percona/tde:ekf"],
    tags = [
        "backup_tde_gcm",
        "percona",
        "tde",
    ],
    deps = [
        "//src/mongo/db:mongod",
        "//src/mongo/shell:mongo",
    ],
)
