load("//bazel:mongo_js_rules.bzl", "all_subpackage_javascript_files", "mongo_js_library")
load("//bazel/resmoke:resmoke.bzl", "resmoke_suite_test")

package(default_visibility = ["//visibility:public"])

mongo_js_library(
    name = "all_javascript_files",
    srcs = glob([
        "*.js",
    ]),
)

all_subpackage_javascript_files()

# OIDC tests run against a mock identity provider (jstests/oidc/lib/oidc_idp_mock.py, a
# Python HTTP/HTTPS server launched by oidc_fixture.js), so the suite is self-contained
# rather than needing a real external IdP -- but the worker's python3 must have the
# `cryptography` and `PyJWT[crypto]` packages (both are in the repo poetry.lock; the mock
# fails to start without them). Most tests parametrize over StandaloneMongod and
# ShardedCluster, hence mongos. The suite roots are jstests/oidc/*.js (top level), so the
# lib/ fixture + mock + certs must be shipped explicitly as data.
resmoke_suite_test(
    name = "oidc",
    config = "//buildscripts/resmokeconfig:suites/oidc.yml",
    data = [
        "//jstests/oidc/lib:all_javascript_files",
        "//jstests/oidc/lib:ca_oidc_idp.crt",
        "//jstests/oidc/lib:ca_oidc_idp.pem",
        "//jstests/oidc/lib:oidc_idp_mock.py",
    ],
    shard_count = 10,
    tags = [
        "oidc",
        "percona",
    ],
    deps = [
        "//src/mongo/db:mongod",
        "//src/mongo/s:mongos",
        "//src/mongo/shell:mongo",
    ],
)
