load("//bazel:mongo_js_rules.bzl", "all_subpackage_javascript_files", "mongo_js_library")
load("//bazel/resmoke:resmoke.bzl", "resmoke_suite_test")

package(default_visibility = ["//visibility:public"])

mongo_js_library(
    name = "all_javascript_files",
    srcs = glob([
        "*.js",
    ]),
)

all_subpackage_javascript_files()

resmoke_suite_test(
    name = "redaction",
    config = "//buildscripts/resmokeconfig:suites/redaction.yml",
    # redaction_config.js / redaction_mongos_config.js load this config file via a relative path at runtime.
    data = ["//jstests/libs/config_files:redaction_config.yaml"],
    tags = [
        "percona",
        "redaction",
    ],
    # redaction_mongos_*.js stand up a ShardingTest.
    deps = [
        "//src/mongo/db:mongod",
        "//src/mongo/s:mongos",
        "//src/mongo/shell:mongo",
    ],
)
