load("//bazel:mongo_js_rules.bzl", "all_subpackage_javascript_files", "mongo_js_library")
load("//bazel/resmoke:resmoke.bzl", "resmoke_suite_test")

package(default_visibility = ["//visibility:public"])

mongo_js_library(
    name = "all_javascript_files",
    srcs = glob([
        "*.js",
    ]),
)

all_subpackage_javascript_files()

resmoke_suite_test(
    name = "telemetry",
    config = "//buildscripts/resmokeconfig:suites/telemetry.yml",
    tags = [
        "percona",
        "telemetry",
    ],
    # telemetry_sharded.js / telemetry_auth.js stand up a ShardingTest.
    deps = [
        "//src/mongo/db:mongod",
        "//src/mongo/s:mongos",
        "//src/mongo/shell:mongo",
    ],
)
