load("//bazel:mongo_js_rules.bzl", "all_subpackage_javascript_files", "mongo_js_library")

package(default_visibility = ["//visibility:public"])

mongo_js_library(
    name = "server_types",
    srcs = ["server_types.js"],
)

mongo_js_library(
    name = "auto_retry_transaction",
    srcs = ["auto_retry_transaction.js"],
    deps = [
        "//jstests/core/txns/libs:all_javascript_files",
        "//jstests/libs/txns:all_javascript_files",
    ],
)

mongo_js_library(
    name = "fsm_workload_helpers",
    srcs = [":all_subpackage_javascript_files"],
    deps = [
        "//jstests/core/txns/libs:all_javascript_files",
        "//jstests/libs/txns:all_javascript_files",
    ],
)

mongo_js_library(
    name = "all_javascript_files",
    srcs = glob([
        "*.js",
    ]),
)

all_subpackage_javascript_files()
