load("//bazel:mongo_js_rules.bzl", "all_subpackage_javascript_files", "mongo_js_library")
load("//bazel/resmoke:resmoke.bzl", "resmoke_suite_test")

package(default_visibility = ["//visibility:public"])

mongo_js_library(
    name = "all_javascript_files",
    srcs = glob([
        "*.js",
    ]),
)

all_subpackage_javascript_files()

resmoke_suite_test(
    name = "percona_no_passthrough_with_mongod",
    config = "//buildscripts/resmokeconfig:suites/percona_no_passthrough_with_mongod.yml",
    tags = [
        "percona",
        "percona_no_passthrough_with_mongod",
    ],
    deps = [
        "//src/mongo/db:mongod",
        "//src/mongo/shell:mongo",
    ],
)
