load("//bazel/resmoke:resmoke.bzl", "resmoke_suite_test")
load(":common.bzl", "CONCURRENCY_DATA", "CORE_DATA")

resmoke_suite_test(
    name = "core",
    srcs = [
        "//jstests/core:all_subpackage_javascript_files",
        "//jstests/core_standalone:all_subpackage_javascript_files",
    ],
    config = "//buildscripts/resmokeconfig:suites/core.yml",
    data = CORE_DATA,
    exclude_files = [
        # Queryable encryption is not supported on standalone.
        "//jstests/core/query/queryable_encryption:all_subpackage_javascript_files",

        # Query settings are not supported on standalone.
        "//jstests/core/query/query_settings:all_subpackage_javascript_files",

        # Transactions are not supported on MongoDB standalone nodes, so we do not run these tests in the
        # 'core' suite. Instead we run them against a 1-node replica set in the 'core_txns' suite.
        "//jstests/core/txns:all_subpackage_javascript_files",
    ],
    shard_count = 24,
    tags = [
        "ci-development-critical",
        "ci-development-critical-single-variant",
        "common",
        "jscore",
    ],
    deps = [
        "//src/mongo/db:mongod",
        "//src/mongo/s:mongos",
        "//src/mongo/shell:mongo",
    ],
)

resmoke_suite_test(
    name = "concurrency",
    srcs = ["//jstests/concurrency/fsm_workloads:all_subpackage_javascript_files"],
    config = "//buildscripts/resmokeconfig:suites/concurrency.yml",
    data = CONCURRENCY_DATA,
    exclude_with_any_tags = [
        "uses_transactions",
        "requires_replication",
        "requires_sharding",
    ],
    shard_count = 5,
    tags = [
        "ci-release-critical",
        "common",
        "concurrency",
        "resources:cpu:2",
    ],
    target_compatible_with = select({
        "@platforms//cpu:ppc": ["@platforms//:incompatible"],
        "@platforms//cpu:s390x": ["@platforms//:incompatible"],
        "@platforms//os:macos": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
    deps = [
        "//src/mongo/db:mongod",
        "//src/mongo/shell:mongo",
    ],
)
