load("//bazel:mongo_src_rules.bzl", "mongo_cc_library")

package(default_visibility = ["//visibility:public"])

exports_files(glob([
    "*.cpp",
    "*.h",
    "*.inl",
    "*.hpp",
    "*.py",
    "*.in",
]))

filegroup(
    name = "ldap_global_hdrs",
    srcs = glob([
        "*.h",
        "*.inl",
        "*.hpp",
    ]),
)

mongo_cc_library(
    name = "ldap_manager",
    srcs = [
        "//src/mongo/db/ldap:ldap_manager.cpp",
        "//src/mongo/db/ldap:ldap_manager_impl.cpp",
    ],
    deps = [
        "//src/mongo/db:ldap_options",
        "//src/mongo/db:service_context",
        "//src/mongo/util:background_job",
    ],
    linkopts = [
        "-lldap",
        "-llber",
    ],
)
