load("//bazel:mongo_src_rules.bzl", "idl_generator", "mongo_cc_library")

package(default_visibility = ["//visibility:public"])

exports_files(
    glob([
        "*.h",
        "*.cpp",
    ]),
)

idl_generator(
    name = "recycle_bin_gen",
    src = "recycle_bin.idl",
    deps = [
        "//src/mongo/db:basic_types_gen",
    ],
)

mongo_cc_library(
    name = "recycle_bin_commands",
    srcs = [
        "recycle_bin_commands.cpp",
    ],
    deps = [
        "//src/mongo/db:commands",
        "//src/mongo/db/auth",
        "//src/mongo/db/auth:authprivilege",
        "//src/mongo/db/shard_role/shard_catalog:catalog_helpers",
    ],
)
