load("//bazel:mongo_src_rules.bzl", "mongo_cc_library", "mongo_idl_library")

package(default_visibility = ["//visibility:public"])

exports_files(glob([
    "*.cpp",
    "*.h",
    "*.inl",
    "*.hpp",
    "*.py",
    "*.in",
]))

filegroup(
    name = "telemetry_global_hdrs",
    srcs = glob([
        "*.h",
        "*.inl",
        "*.hpp",
    ]),
)

mongo_idl_library(
    name = "telemetry_parameter_idl",
    src = "telemetry_parameter.idl",
)

mongo_cc_library(
    name="telemetry_base",
    srcs = [
        "//src/mongo/db/telemetry:telemetry_parameter.cpp",
        "//src/mongo/db/telemetry:telemetry_path.cpp",
        "//src/mongo/db/telemetry:telemetry_thread_base.cpp",
    ],
    deps = [
        "//src/mongo/db:server_base",
        "//src/mongo/db:service_context",
        "//src/mongo/db:ldap_options",
        "//src/mongo/db/auth:sasl_options",
        "//src/mongo/db/telemetry:telemetry_parameter_idl",
        "//src/mongo/util:background_job",
    ] + select({
        "//bazel/config:oidc_selected": [
            "//src/mongo/db/auth/oidc:oidc",
        ],
        "//conditions:default": [],
    }),

)

mongo_cc_library(
    name="telemetry_d",
    srcs = [
        "//src/mongo/db/telemetry:telemetry_thread_d.cpp",
    ],
    deps = [
        "//src/mongo/db/catalog:collection_options",
        "//src/mongo/db/encryption:vault_client",
        "//src/mongo/db/repl:repl_server_parameters_idl",
        "//src/mongo/db/repl:storage_interface",
        "//src/mongo/db/telemetry:telemetry_base",
        "//src/mongo/s:grid",
    ],
)

mongo_cc_library(
    name="telemetry_s",
    srcs = [
        "//src/mongo/db/telemetry:telemetry_thread_s.cpp",
    ],
    deps = [
        "//src/mongo/db/telemetry:telemetry_base",
        "//src/mongo/s:grid",
    ],
)
