load("//bazel:mongo_src_rules.bzl", "mongo_cc_library", "mongo_cc_unit_test", "mongo_idl_library")

package(default_visibility = ["//visibility:public"])

exports_files(glob([
    "*.cpp",
    "*.h",
    "*.inl",
    "*.hpp",
    "*.py",
    "*.in",
]))

filegroup(
    name = "auth_oidc_global_hdrs",
    srcs = glob([
        "*.h",
        "*.inl",
        "*.hpp",
    ]),
)

mongo_idl_library(
    name = "oidc_server_parameters_idl",
    src = "oidc_server_parameters.idl",
    idl_deps = [
        "//src/mongo/db:basic_types_idl_gen",
    ],
    deps = [
        "//src/mongo/db:basic_types_idl",
    ],
)

mongo_cc_library(
    name = "oidc",
    srcs = [
        "//src/mongo/db/auth/oidc:oidc_identity_providers_registry.cpp",
        "//src/mongo/db/auth/oidc:oidc_identity_providers_registry_impl.cpp",
        "//src/mongo/db/auth/oidc:oidc_server_parameters.cpp",
    ],
    deps = [
        "//src/mongo:base",
        "//src/mongo/crypto:jwt",
        "//src/mongo/crypto:jwt_types_idl",
        "//src/mongo/db:server_base",
        "//src/mongo/db:service_context",
        "//src/mongo/db/auth/oidc:oidc_server_parameters_idl",
        "//src/mongo/util/options_parser"
    ],
)

mongo_cc_library(
    name = "oidc_commands",
    srcs = [
        "//src/mongo/db/auth/oidc:oidc_commands.cpp",
    ],
    deps = [
        "//src/mongo/db:commands",
        "//src/mongo/db/auth/oidc:oidc",
        "//src/mongo/db/commands:test_commands_enabled",
    ],
)

mongo_cc_library(
    name = "oidc_test_fixture",
    hdrs = [
        "//src/mongo/db/auth/oidc:oidc_test_fixture.h",
    ],
    deps = [
        "//src/mongo/crypto:jwt",
        "//src/mongo/db:audit",
        "//src/mongo/db/auth:auth_impl_internal",
        "//src/mongo/db/auth:authmocks",
        "//src/mongo/db/auth:authorization_session_test_fixture",
        "//src/mongo/db/auth/oidc:oidc",
    ],
)

mongo_cc_unit_test(
    name = "oidc_test",
    srcs = [
        "//src/mongo/db/auth/oidc:oidc_commands_test.cpp",
        "//src/mongo/db/auth/oidc:oidc_identity_providers_registry_test.cpp",
    ],
    deps = [
        "//src/mongo/db:server_base",
        "//src/mongo/db/auth/oidc:oidc",
        "//src/mongo/db/auth/oidc:oidc_commands",
        "//src/mongo/db/auth/oidc:oidc_test_fixture",
    ]
)
